--- a/package.json
+++ b/package.json
@@ -13,10 +13,24 @@
   },
   "keywords": [],
   "author": "Ben McCormick",
+  "dependencies": {
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "troll-client": "^0.0.3"
+  },
   "devDependencies": {
+    "babel-cli": "^6.7.7",
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "electron-prebuilt": "^1.0.1",
-    "webpack": "^1.13.0",
+    "node-libs-browser": "^0.5.2",
+    "react-hot-loader": "^1.2.7",
+    "webpack": "^1.9.11",
+    "webpack-dev-server": "^1.9.0",
     "webpack-target-electron-renderer": "^0.4.0"
   }
 }
