--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   "keywords": [],
   "author": "Ben McCormick",
   "dependencies": {
+    "lodash": "^4.12.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
     "troll-client": "^0.0.3"
   },
   "devDependencies": {
@@ -23,12 +28,13 @@
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
-    "electron-prebuilt": "^1.0.1",
+    "electron-prebuilt": "^1.2.1",
+    "eslint-plugin-react": "^5.1.1",
     "node-libs-browser": "^0.5.2",
     "react-hot-loader": "^1.2.7",
+    "style-loader": "^0.13.1",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0",
     "webpack-target-electron-renderer": "^0.4.0"
