--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Ben McCormick",
   "dependencies": {
     "lodash": "^4.12.0",
+    "moment": "^2.13.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
