--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "build": "webpack"
   },
   "repository": {
@@ -34,6 +35,7 @@
     "css-loader": "^0.23.1",
     "electron-prebuilt": "^1.2.1",
     "eslint-plugin-react": "^5.1.1",
+    "flow-bin": "^0.27.0",
     "node-libs-browser": "^0.5.2",
     "react-hot-loader": "^1.2.7",
     "style-loader": "^0.13.1",
