--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Trollbox",
   "version": "0.0.1",
-  "description": "A fast viewer for Trello",
+  "description": "A fast search tool for Trello",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
