Initial work to add flow types
There's some problems with getting the interfaces checking properly
but it seems to basically be working.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 //ESLint Configuration (eslint allows comments in JSON, use them)
 {
+    "parser": "babel-eslint",
     "parserOptions": {
 
         "ecmaVersion": 6,
@@ -11,7 +12,10 @@
     "env": {
        "browser": true,
     },
-    "plugins":["react"],
+    "plugins":[
+        "flowtype",
+        "react"
+    ],
      "extends": ["plugin:react/recommended"],
     "rules": {
         "brace-style": [2, "1tbs"],
