--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
   "devDependencies": {
     "babel-cli": "^6.7.7",
     "babel-core": "^6.7.7",
+    "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "electron-prebuilt": "^1.2.1",
+    "eslint-plugin-flowtype": "^2.3.0",
     "eslint-plugin-react": "^5.1.1",
     "flow-bin": "^0.27.0",
+    "iflow-lodash": "^1.1.16",
     "node-libs-browser": "^0.5.2",
     "react-hot-loader": "^1.2.7",
     "style-loader": "^0.13.1",
