--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "electron-prebuilt": "^1.2.1",
+    "empty": "^0.10.1",
     "eslint-plugin-flowtype": "^2.3.0",
     "eslint-plugin-react": "^5.1.1",
     "flow-bin": "^0.27.0",
