--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "cross-env NODE_ENV=development electron main.js",
     "startProd": "cross-env NODE_ENV=production electron main.js",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "prepackage": "npm test",
     "package": "NODE_ENV=production && node package.js",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,7 @@
     "babel-cli": "^6.7.7",
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.1.0",
+    "babel-jest": "^14.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
     "babel-preset-react": "^6.5.0",
@@ -46,11 +49,19 @@
     "eslint-plugin-react": "^5.1.1",
     "flow-bin": "^0.27.0",
     "iflow-lodash": "^1.1.16",
+    "jest-cli": "^14.1.0",
     "node-libs-browser": "^0.5.2",
     "react-hot-loader": "^1.2.7",
     "style-loader": "^0.13.1",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0",
     "webpack-target-electron-renderer": "^0.4.0"
+  },
+  "jest": {
+    "unmockedModulePathPatterns": [
+      "react",
+      "lodash",
+      "moment"
+    ]
   }
 }
