--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "moment": "^2.13.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-icons": "^2.2.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-localstorage": "^0.4.1",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "troll-client": "^0.0.4"
+    "troll-client": "^0.0.4",
+    "uuid": "^2.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.7.7",
