--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-hot-loader": "^1.2.7",
     "style-loader": "^0.13.1",
     "webpack": "^1.9.11",
+    "webpack-dashboard": "0.0.1",
     "webpack-dev-server": "^1.9.0",
     "webpack-target-electron-renderer": "^0.4.0"
   },
