Initial multi-view support
- Add first take at creating view page
- Allow selecting current view in sidebar

--- a/.flowconfig
+++ b/.flowconfig
@@ -6,6 +6,6 @@
 ./node_modules/iflow-lodash/index.js.flow
 
 [options]
-module.name_mapper='^\(.*\)\.css$' -> '<PROJECT_ROOT>/app/interfaces/CSSModule.js.flow'
+module.name_mapper='^\(.*\)\.css\(\?global=true\)?$' -> '<PROJECT_ROOT>/app/interfaces/CSSModule.js.flow'
 module.name_mapper='electron' -> 'empty'
 suppress_type=$FlowIssue
